# bjhb-readiness

./: .gitignore  CLAUDE.md  README.md  app.py  pyproject.toml  requirements.txt
.claude/agents/: sap-validator.md
.claude/commands/: readiness.md
docs/: SAP_EXPORT_CHECKLIST.md
inputs/archive/: 2026-04-22_coois_components.xlsx  2026-04-22_mb52_stock.xlsx
scripts/: build_readiness.py  validate_inputs.py
